Fixed centering on mobile home page, increased font size

--- a/styles/abstracts/_font.module.scss
+++ b/styles/abstracts/_font.module.scss
@@ -19,7 +19,7 @@ $font-body-color: #EAF6FF;
 $font-title: ailerons, serif;
 $font-body: kollektif, serif;
 
-$heading-size: 13vw;
+$heading-size: 15vw;
 $heading-alignment: center;
 $heading-weight: 700;
 
